# hi-happy-garden-rs

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  clean_all.sh  hhg-config.h.in  memory.x  secrets.cmake.example
assets/: ic_administrator.xcf  ic_check.xcf  ic_check_off.h  ic_check_off.xcf  ic_check_on.h  ic_check_on.xcf  ic_wifi_excellent.xcf  ic_wifi_fair.xcf  ic_wifi_good.xcf  ic_wifi_no_signal.xcf
cyw43-firmware/: README.md
documents/: EEPROM AT24C32.desktop  RTC DS3231.desktop  at_cmd_login.txt  at_commands.md  hw_scheme.drawio  pico_sdk.desktop  rtc_module.desktop
hhg-app/: Cargo.toml
hhg-app/src/: app.rs  app_main.rs  lib.rs
hhg-drivers/: Cargo.toml
hhg-drivers/.cargo/: config.toml
hhg-drivers/src/: lib.rs  pico.rs
hhg-drivers/src/pico/: gpio.rs  hardware.rs
hhg-hardware/: Cargo.toml
hhg-hardware/src/: lib.rs  pico.rs
hhg-hardware/src/pico/: gpio.rs  hardware.rs
hhg-traits/: Cargo.toml
hhg-traits/src/: gpio.rs  lib.rs
inc/: main.h
inc/hhg-config/pico/: FreeRTOSConfig.h  hhg-config.h  lwipopts.h  mbedtls_config.h
inc/hhg-ffi/pico/: hhg-hardware.h  hhg-systick.h
main/: Cargo.toml  build.rs
main/.cargo/: config.toml
main/src/: apps.rs  assets.rs  drivers.rs  error.rs  lib.rs  traits.rs
main/src/apps/: app_main.rs  config.rs  configuration.rs  configurations.rs  display.rs  main.rs  parser.rs  screen_path.rs  screen_route.rs  session.rs  signals.rs  sprinkler.rs  system_handler.rs  system_led.rs  users.rs  utils.rs  wifi.rs
main/src/apps/display/: check.rs  commons.rs  date.rs  date_time_editor.rs  header.rs  input.rs  number.rs  select.rs  text.rs  time.rs
main/src/apps/screen_route/: auth.rs  config.rs  date_time.rs  daylight_saving_time.rs  info.rs  login.rs  main.rs  set_config.rs  sprinkler.rs  user.rs  wifi.rs
main/src/apps/signals/: display.rs  error.rs  status.rs
main/src/apps/sprinkler/: commons.rs  schedule.rs  zone.rs
main/src/assets/: font_5x8.rs  font_8x8.rs  ic_administrator.rs  ic_check_off.rs  ic_check_on.rs  ic_wifi_excellent.rs  ic_wifi_fair.rs  ic_wifi_good.rs  ic_wifi_no_signal.rs  ic_wifi_off.rs  ic_wifi_on.rs  types.rs
main/src/drivers/: button.rs  date_time.rs  ecnrypt.rs  encoder.rs  encrypt.rs  error.rs  filesystem.rs  gpio.rs  i2c.rs  lcd_sh1106.rs  network.rs  pico.rs  relays.rs  rgb_led.rs  rtc.rs  time.rs  timer.rs  uart.rs  wifi.rs
main/src/drivers/pico/: ffi.rs  flash.rs  gpio.rs  hardware.rs  hw_timer.rs  i2c.rs  lwip.rs  mbedtls.rs  rtc_ds3231.rs  uart.rs  wifi_cyw43.rs
main/src/traits/: button.rs  encoder.rs  hardware.rs  integer.rs  lcd_display.rs  network.rs  relays.rs  rgb_led.rs  rtc.rs  rx_tx.rs  screen.rs  signal.rs  state.rs  wifi.rs
rust/: Cargo.toml
rust/src/: app.rs  drivers.rs  lib.rs  traits.rs
rust/src/app/: app_main.rs  display.rs  lcd.rs
rust/src/apps/: app_main.rs  display.rs
rust/src/drivers/: button.rs  encoder.rs  filesystem.rs  gpio.rs  i2c.rs  lcd_sh1106.rs  pico.rs  relays.rs  rgb_led.rs  uart.rs
rust/src/drivers/pico/: ffi.rs  flash.rs  gpio.rs  hardware.rs  i2c.rs  lcd_sh1106.rs  uart.rs
rust/src/traits/: button.rs  encoder.rs  flash.rs  gpio.rs  hardware.rs  initializable.rs  lcd_display.rs  relays.rs  rx_tx.rs  state.rs
src/: hhg-gpio-wrapper.c  hhg-i2c-wrapper.c  hhg-systick.c  hhg-uart-wrapper.c  hhg_cyw43-wrapper.c  hi-happy-garden-rs.cpp  main.c  main.rs
src/config/: mod.rs
src/irrigation/: mod.rs
src/pico/: hhg-cyw43-wrapper.c  hhg-freertos-runtime-stats.c  hhg-gpio-wrapper.c  hhg-i2c-wrapper.c  hhg-lfs-wrapper.c  hhg-lwip.c  hhg-mbedtls-wrapper.c  hhg-system-wrapper.c  hhg-systick.c  hhg-timers.c  hhg-uart-wrapper.c
src/wifi/: mod.rs
