[package]
name = "hi-happy-garden-rs"
version = "0.1.0"
edition = "2021"
authors = ["Hi Happy Garden <info@hihappygarden.com>"]
description = "Smart irrigator firmware for Raspberry Pico 2 W"
license = "GPL-3.0"
repository = "https://github.com/HiHappyGarden/hi-happy-garden-rs"

[dependencies]
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.9", features = ["defmt", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-net = { version = "0.7", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
cyw43 = { version = "0.6", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.9", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = "0.6"

fixed = "1.29"
heapless = "0.8"
static_cell = "2.1"
portable-atomic = { version = "1.10", features = ["critical-section"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
lto = true
opt-level = "z"
