[package]
name = "hhg-app"
version = "0.1.0"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
edition = "2024"
license = "GPL3"
readme = "README.md"
repository = "https://github.com/HiHappyGarden/hi-happy-garden-rs"

[lib]
crate-type = ["staticlib", "rlib"]  

[dependencies]
hhg-traits = { path = "../hhg-traits" }
hhg-drivers = { path = "../hhg-drivers" }
osal-rs = { path = "../osal-rs/osal-rs", features = ["freertos"] }
cjson-bindings = { version = "0.5.0" }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
opt-level = "z"
lto = true
