[package]
name = "hhg-drivers"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/HiHappyGarden/hi-happy-garden-rs"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
pico = []
tests = []

[dependencies]
hhg-traits = { path = "../hhg-traits" }
osal-rs = { path = "../osal-rs/osal-rs", features = ["freertos"] }
osal-rs-tests = { path = "../osal-rs/osal-rs-tests", features = ["freertos"] }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
opt-level = "z"
lto = true