[package]
name = "hhg-hardware"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
edition = "2024"
license = "GPL3"
readme = "README.md"
repository = "https://github.com/HiHappyGarden/hi-happy-garden-rs"

[lib]
crate-type = ["staticlib", "rlib"]  

[dependencies]
hhg-traits = { path = "../hhg-traits" }
panic-halt = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"