[package]
name = "hhg-hardware"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/HiHappyGarden/hi-happy-garden-rs"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
pico = []
examples = []

[dependencies]
hhg-traits = { path = "../hhg-traits" }
osal-rs = { path = "../osal-rs/osal-rs", features = ["freertos"] }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
opt-level = "z"
lto = true