[package]
name = "hhg-traits"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/HiHappyGarden/hi-happy-garden-rs"

[lib]
crate-type = ["rlib"]  

[dependencies]
osal-rs = { path = "../osal-rs/osal-rs", features = ["freertos"] }