[package]
name = "rust"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/HiHappyGarden/hi-happy-garden-rs"

[lib]
crate-type = ["staticlib"]

[features]
default = ["pico"]
pico = []
tests = []

[dependencies]
osal-rs = { path = "../osal-rs/osal-rs", features = ["freertos"] }
osal-rs-tests = { path = "../osal-rs/osal-rs-tests", features = ["freertos"] }
at-parser-rs = { path = "../at-parser-rs", features = ["osal_rs"] }
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
opt-level = "z"
lto = true