[package]
name = "rust"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Salsi <passy.linux@zresa.it>"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/HiHappyGarden/hi-happy-garden-rs"

[lib]
crate-type = ["staticlib"]

[features]
default = ["pico"]
pico = []
tests = ["osal-rs-tests"]

[dependencies]
osal-rs = { path = "../osal-rs/osal-rs", features = ["freertos", "serde"] }
osal-rs-serde = { path = "../osal-rs/osal-rs-serde", features = ["derive"] }
osal-rs-tests = { path = "../osal-rs/osal-rs-tests", features = ["freertos"], optional = true }
at-parser-rs = { path = "../at-parser-rs", features = ["osal_rs"] }
cjson-binding = { path = "../cjson-rs", features = ["osal_rs"] }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
opt-level = "z"
lto = true